--- a/uTask/style.css
+++ b/uTask/style.css
@@ -5,24 +5,35 @@
     margin: 0;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
+}
 
+:root{
     /* colors */
     --azul-logo: #0C58D3;
     --azul-logo-hover: #7ba0dd;
 
     --background: #FCFCFC;
-    --borda: #D9D9D9;
+    --borda: #c0bfbf;
     --borda-input-focus: #c0bfbf;
+    --letra-input: #000;
     --placeholder: rgba(0, 0, 0, 0.7);
+    --background-input: #ffffff;
     --button-plus: rgb(0, 0, 0);
-    --button-plus-hover: rgb(39, 39, 39);
+    --hover-plus: rgb(39, 39, 39);
     --card: rgb(255, 255, 255);
+    --borda-card: rgb(255, 255, 255);
     --card-shadow:rgb(182, 181, 181);
     --linha1: #e6e6e6;
     --linha2: #e9e9e9;
-    --linha3: rgb(185, 185, 185);
+    --linha3: rgb(226, 226, 226);
     --letras: black;
-
+    --botão-limpar: rgb(255, 255, 255);
+    --botão-aplicar: #3071D9;
+    --letra-botão-aplicar:rgb(255, 255, 255); 
+    --letra-botão-limpar:#3071D9;
+    --hover-limpar: #cbe6e7af;
+    --hover-aplicar: #547fc4;
+    --background-input-imagem: rgb(255, 255, 255);
 }
 
 button, a{
@@ -30,6 +41,7 @@ button, a{
 }
 
 body{
+    background-image: none;
     background-color: var(--background);
 }
 
@@ -59,6 +71,12 @@ nav{
 }
 
 /* Título */
+
+.titulo{
+    display: block;
+    justify-content:center;
+}
+
 h1 {
     font-family: 'Ubuntu', sans-serif;
     color: var(--azul-logo);
@@ -69,6 +87,13 @@ h1 {
 i{
     font-family: 'Ubuntu', sans-serif;
     font-weight: 100;
+}
+
+header .container nav .titulo hr {
+    border: 0;
+	border-top: 1px solid var(--azul-logo);
+    margin-inline: 25px;
+    margin-bottom: 21px;
 }
 
 /* Botão */
@@ -107,8 +132,10 @@ input {
     font-family: 'Roboto', sans-serif;
     size: 14px;
     border: 1px solid var(--borda);
-    box-shadow: var(--borda) 1px 1px 1px 1px;
+    box-shadow: #747373 1px 1px 2px;
     border-radius: 14px;
+    background-color: var(--background-input);
+    color: var(--letra-input);
 }
 
 input::placeholder{
@@ -132,7 +159,7 @@ input:focus {
 }
 
 .button-plus:hover{
-    color: var(--button-plus-hover);
+    color: var(--hover-plus);
 }
 
 /*-- Cards -----------------------------------------*/
@@ -151,22 +178,31 @@ input:focus {
     width: 300px;
     height: 350px;
     background-color: var(--card);
-    border: 1px solid var(--borda);
+    border: 1px solid var(--borda-card);
     border-radius: 9px;
     box-shadow: 0px 4px 6px var(--card-shadow);
+
 }
 
 
 /* Linha */
+
+.linhas{
+    display: block;
+    justify-content:center;
+}
+
 .linha-item{
     display: flex;
     align-items: center;
-    justify-content:space-around;
-    
+    justify-content:space-between;
+    margin-block: 5px;
 }
+
 
 .botao-item{
     display: flex;
+    align-items: center;
     justify-content:space-around;
 }
 
@@ -185,14 +221,27 @@ h2{
 }
 
 p{
-    font-size:14px;
+    font-size:18px;
     font-weight: 500;
     line-height: 20px;
     padding-block: 10px;
+    margin-left: 5vh;
+}
+
+.riscado{
+    text-decoration: line-through;
+    font-style: italic;
+    font-size: 100;
 }
 
 a{
-    margin-left: 20px;
+    margin-right: 18px;
+    padding:0px;
+}
+
+img{
+    padding: 0;
+    margin: 0;
 }
 
 /* Botões */
@@ -202,6 +251,7 @@ a{
 
 .botao-menos{
     color:#ff0000be;
+    margin-right: 7px;
 }
 
 .botao-ok{
@@ -210,8 +260,7 @@ a{
 }
 
 .botao-retorno{
-    width: 19px;
-    padding: 0;
+    width: 16px;
 }
 
 /*Linhas separa*/
@@ -243,7 +292,7 @@ a{
 }
 #modal #content{
     background-color: var(--card);
-    width: 514px;
+    width: 400px;
     margin: 30vh auto;
     padding: 20px;
     z-index: 3;
@@ -251,6 +300,13 @@ a{
     border-radius: 15px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+.alinhamento{
+    display: flex;
+    justify-content:space-between;
+}
+
+/* Modal texto */
 #modal #content h1{
     font-style: normal;
     font-size: 28px;
@@ -262,24 +318,36 @@ a{
 }
 
 #modal #content p{
-    margin-bottom:20px;
+    margin-top: 20px;
     font-weight: 400;
     font-size: 20px;
     padding-top:5px;
+    margin-left: 2vh;
 }
 
 #modal #content hr{
     border: 0;
 	border-top: 2px solid var(--linha3);
     margin-inline: 5px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
-.darkmode-alinhamento{
-    display: flex;
-    justify-content:space-between;
+/* Input imagem */
+
+.input-imagem{
+    margin-left: 2vh;
+    width: 47vh;
+    border: 0;
+    border-bottom: 2px solid var(--linha3);
+    border-radius: 0px;
+    box-shadow: none;
+    outline: none;
+    transition: .2s ease-in-out;
+    box-sizing: border-box;
+    background-color: var(--background-input-imagem);
 }
 
+/* Botão Light-Dark mode */
 input[type=checkbox]{
     height: 0;
     width: 0;
@@ -287,9 +355,10 @@ input[type=checkbox]{
 }
 
 label {
+    margin-top: 20px;
     cursor: pointer;
     text-indent: -9999px;
-    width: 52px;
+    width: 60px;
     height: 27px;
     background: #E1E1E1;
     float: right;
@@ -310,14 +379,48 @@ label::after{
 }
 
 input:checked + label {
-    background-color: red;
+    background-color: #0E0E0E;
 }
 
 input:checked + label::after {
     left: calc(100% - 5px);
     transform: translateX(-100%);
+    background-color: #3071D9;
 }
 
 label:active:after {
     width: 45px;
+}
+
+
+/* Botão Limpar e Aplicar */
+
+#modal #content button{
+    width: 105px;
+    height: 34px;
+    border-radius: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-block: 14px;
+}
+
+#button-limpar{
+    margin-left: 2vh;
+    background-color: var(--botão-limpar);
+    color: var(--letra-botão-limpar);
+    border: 1px solid var(--botão-aplicar);
+}
+
+#button-aplicar{
+    margin-right: 1vh;
+    background-color: var(--botão-aplicar);
+    color: var(--letra-botão-aplicar);
+    border: 1px solid var(--botão-limpar);
+}
+
+#button-limpar:hover{
+    background-color: var(--hover-limpar);
+}
+
+#button-aplicar:hover{
+    background-color: var(--hover-aplicar);
 }
